--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -48,7 +48,7 @@ description = "Epistemology, Philosophy of Religion, Philosophy of Moral Psychol
 
 # Display a logo in navigation bar rather than title (optional).
 #   To enable, place an image in `static/img/` and reference its filename below. To disable, set the value to "".
-logo = "300px-Cavalier_soldier_Hals-1624x.jpg"
+logo = "cavalier-soldier.jpg"
 
 ############################
 ## Site Features
@@ -114,7 +114,7 @@ appointment_url = "https://calendly.com"
 #  {icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/"},
 #  {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://discourse.gohugo.io"},
   # {icon = "telegram", icon_pack = "fab", name = "Telegram Me", link = "https://telegram.me/@Telegram"},
-  ]
+  #]
 
 ############################
 ## Social
