--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -30,7 +30,7 @@
 
 [[main]]
   name = "Slides"
-  url = "#slides-Hume-Presentation"
+  url = "#slides"
   weight = 70
 
 # Link to a PDF of your resume/CV from the menu.
