--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -29,8 +29,8 @@
   weight = 60
 
 [[main]]
-  name = "Slides"
-  url = "#slides/example"
+  name = "Talks"
+  url = "#talks"
   weight = 70
 
 # Link to a PDF of your resume/CV from the menu.
