--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -19,19 +19,19 @@
   weight = 30
 
 [[main]]
-  name = "Publications"
-  url = "#featured"
-  weight = 40
-
-[[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 40
 
 [[main]]
   name = "Talks"
   url = "#talks"
-  weight = 70
+  weight = 50
+
+[[main]]
+  name = "Works Cited"
+  url = "#featured"
+  weight = 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
